--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 
+.background-image {
+    background-size:contain;
+    max-width: 800px;
+}
+
+
 .login-box {
     margin: auto;
     margin-top: 150px;
@@ -11,7 +17,6 @@
     padding-top: 40px;
     font-family: 'Times New Roman', Times, serif;
     color: white;
-    
 }
 
 
