--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
+
+container {
+    
+    background-image:  linear-gradient(rgba(0, 0, 0, 0.705), rgba(0, 0, 0, 0.705)), url(#);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
 
 .login-box {
     margin: auto;
